# khi_pick_and_place_1

./: README.md  makefoxy.bat  makemelodic.bat  makemelodic0.bat  makenoetic.bat  makenoetic0.bat  newroswindow.bat  rs007n_launch.txt  startfoxy.bat  startmelodic.bat  startnoetic.bat  startnoetic1.bat
KhiPickAndPlaceProject/: .gitignore  packages.config  run1.bat  run2.bat  run3.bat
KhiPickAndPlaceProject/Assets/: ImportingNiryo.unity  Part3Rs007n.unity  msgbrowser_settings.asset  packages.config  rob_mm_test.unity
KhiPickAndPlaceProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
ROS/src/rs007_control/: CMakeLists.txt  package.xml  readme.md
ROS/src/rs007_control/launch/: color_change.launch  color_demo.launch  moveit.rviz  moveit_rviz.launch  moveit_unity.launch  moveit_unity0.launch  moveit_unity1.launch  moveit_unity_0.launch  rvizdemo.launch  unity_ros.launch
ROS/src/rs007_control/msg/: MagneMotionSled.msg  MagneMotionTray.msg  MagneMotionTray1.msg  Rs007Joints1.msg  Rs007MoveitJointsAndPoseSeq.msg
ROS/src/rs007_control/scripts/: color_publisher.py  getmover1.cmd  getrobrelay.py  marker.py  mover.py  mover1.py  r1_pub.py  robcli.py  robrelay.py  robsrv.py  rs007n_demo.py  rs007n_demo1.py  spheres.py  spheres2.py  trajectory_subscriber.py
ROS/src/rs007_control/scripts/old/: j6_publisher.py  mover0.py
ROS/src/rs007_control/srv/: MoverService.srv
docker/: Dockerfile  Dockerfile.foxy  Dockerfile.melodic  Dockerfile.melodic0  Dockerfile.natu  Dockerfile.noetic  Dockerfile.noetic0  Dockerfile.original  set-up-workspace-foxy
(+306 files in other folders)
